apps/vaultwarden/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: vaultwarden
      app.kubernetes.io/name: vaultwarden
  serviceName: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 25m
              memory: 392Mi
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
