apps/vaultwarden/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 443
